<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/appBackground"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/menu_manual"
            android:textColor="?attr/mainTextColor"
            android:textSize="24sp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_marginBottom="30dp"/>

        <!-- КНОПКИ РОЗДІЛІВ -->
        <Button
            android:id="@+id/btnMan1"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/title_manual_1"
            android:backgroundTint="?attr/panelColor"
            android:textColor="?attr/mainTextColor"
            android:layout_marginBottom="10dp"/>

        <Button
            android:id="@+id/btnMan2"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/title_manual_2"
            android:backgroundTint="?attr/panelColor"
            android:textColor="?attr/mainTextColor"
            android:layout_marginBottom="10dp"/>

        <Button
            android:id="@+id/btnMan3"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/title_manual_3"
            android:backgroundTint="?attr/panelColor"
            android:textColor="?attr/mainTextColor"
            android:layout_marginBottom="10dp"/>

        <Button
            android:id="@+id/btnMan4"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/title_manual_4"
            android:backgroundTint="?attr/panelColor"
            android:textColor="?attr/mainTextColor"
            android:layout_marginBottom="10dp"/>

        <Button
            android:id="@+id/btnMan5"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/title_manual_5"
            android:backgroundTint="?attr/panelColor"
            android:textColor="?attr/mainTextColor"
            android:layout_marginBottom="30dp"/>

        <Button
            android:id="@+id/btnBack"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:text="@string/btn_back"
            android:backgroundTint="?attr/panelColor"
            android:textColor="?attr/mainTextColor"
            android:layout_gravity="center"/>

    </LinearLayout>
</ScrollView>